# rust-auth_app

./: .env  Cargo.toml
migrations/: 20250729070916_init.sql
src/: lib.rs  main.rs
src/auth/: constants.rs  dto.rs  jwt.rs  mod.rs
src/auth/middlewares/: jwt_auth.rs
src/common/: mod.rs
src/common/database/: mod.rs
src/common/errors/: api_error.rs
src/entities/: mod.rs
src/entities/auth/: constants.rs  jwt.rs  mod.rs
src/entities/auth/guards/: mod.rs  role_guard.rs
src/entities/auth/middlewares/: jwt_auth.rs
src/entities/post/: mod.rs
src/models/: auth.rs  mod.rs  user.rs
src/post/: mod.rs
src/user/: dto.rs  mod.rs
