[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1"
serde_json = "1.0.141"
futures-util = "0.3.31"
validator = {version = "0.20.0", features = ["derive"]}
